# Conways-Game-Of-Life

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Conways Game Of Life.cpp  Conways Game Of Life.h  README.md  config.h.in
include/: GUI.h  Game.h
src/: GUI.cpp  Game.cpp  main.cpp
